force-app/main/default/objects/HSUInsuranceACBal__c/HSUInsuranceACBal__c.object-meta.xml
<CustomObject>
    <label>H/S/U Insurance+A/C Bal</label>
    <nameField>
        <displayFormat>INAC-{000000}</displayFormat>
        <label>H/S/U INSURANCE+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>H/S/U Insurance+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>