force-app/main/default/objects/HSUInsuranceACBal__c/fields/ACBalanceID__c.field-meta.xml
<CustomField>
    <fullName>ACBalanceID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>ACBalance__c</referenceTo>
    <relationshipLabel>H/S/U INSURANCE+A/C BAL</relationshipLabel>
    <relationshipName>HSUInsuranceID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>