force-app/main/default/objects/HSUInsuranceACBal__c/fields/HealthInsuByEmployeeFormu__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuByEmployeeFormu__c</fullName>
    <formula>HSUInsuranceID__r.HealthInsuranceByEmployee__c</formula>
    <label>HEALTH INSURANCE BY EMPLOYEE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>