force-app/main/default/objects/HSUInsuranceACBal__c/fields/HealthInsuByEmployerACBal__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuByEmployerACBal__c</fullName>
    <label>HEALTH INSURANCE BY EMPLOYER-A/C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>