force-app/main/default/objects/HSUInsuranceACBal__c/fields/HealthInsuByEmployerForm__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuByEmployerForm__c</fullName>
    <formula>HSUInsuranceID__r.SocialInsuranceByEmployer__c</formula>
    <label>HEALTH INSURANCE BY EMPLOYER-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>