force-app/main/default/objects/HSUInsuranceACBal__c/fields/HealthInsuranceACBal__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceACBal__c</fullName>
    <label>HEALTH INSURANCE-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>