force-app/main/default/objects/HSUInsuranceACBal__c/fields/HealthInsuranceFormu__c.field-meta.xml
<CustomField>
    <fullName>HealthInsuranceFormu__c</fullName>
    <formula>HSUInsuranceID__r.HealthInsuranceByEmployer__c 
+
 HSUInsuranceID__r.HealthInsuranceByEmployee__c</formula>
    <label>HEALTH INSURANCE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>