force-app/main/default/objects/HSUInsuranceACBal__c/fields/SocialInsuByEmployeeACBal__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuByEmployeeACBal__c</fullName>
    <label>SOCIAL INSURANCE BY EMPLOYEE-A/C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>