force-app/main/default/objects/HSUInsuranceACBal__c/fields/SocialInsuByEmployeeFormu__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuByEmployeeFormu__c</fullName>
    <formula>HSUInsuranceID__r.SocialInsuranceByEmployee__c</formula>
    <label>SOCIAL INSURANCE BY EMPLOYEE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>