force-app/main/default/objects/HSUInsuranceACBal__c/fields/SocialInsuByEmployerFormu__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuByEmployerFormu__c</fullName>
    <formula>HSUInsuranceID__r.SocialInsuranceByEmployer__c</formula>
    <label>SOCIAL INSURANCE BY EMPLOYER-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>