force-app/main/default/objects/HSUInsuranceACBal__c/fields/SocialInsuranceACBal__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuranceACBal__c</fullName>
    <label>SOCIAL INSURANCE-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>