force-app/main/default/objects/HSUInsuranceACBal__c/fields/SocialInsuranceFormu__c.field-meta.xml
<CustomField>
    <fullName>SocialInsuranceFormu__c</fullName>
    <formula>HSUInsuranceID__r.SocialInsuranceByEmployer__c 
+
 HSUInsuranceID__r.SocialInsuranceByEmployee__c</formula>
    <label>SOCIAL INSURANCE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>