force-app/main/default/objects/HSUInsuranceACBal__c/fields/UnemployInsuByEmployeeACBal__c.field-meta.xml
<CustomField>
    <fullName>UnemployInsuByEmployeeACBal__c</fullName>
    <label>UNEMPLOYMENT INSURANCE BY EMPLOYEE-A/C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>