force-app/main/default/objects/HSUInsuranceACBal__c/fields/UnemployInsuByEmployeeFormu__c.field-meta.xml
<CustomField>
    <fullName>UnemployInsuByEmployeeFormu__c</fullName>
    <formula>HSUInsuranceID__r.UnemploymentFundByEmployee__c</formula>
    <label>UNEMPLOYMENT INSURANCE BY EMPLOYEE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>