force-app/main/default/objects/HSUInsuranceACBal__c/fields/UnemployInsuByEmployerACBal__c.field-meta.xml
<CustomField>
    <fullName>UnemployInsuByEmployerACBal__c</fullName>
    <label>UNEMPLOYMENT INSURANCE BY EMPLOYER-A/C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>