force-app/main/default/objects/HSUInsuranceACBal__c/fields/UnemployInsuByEmployerFormu__c.field-meta.xml
<CustomField>
    <fullName>UnemployInsuByEmployerFormu__c</fullName>
    <formula>HSUInsuranceID__r.UnemploymentFundByEmployer__c</formula>
    <label>UNEMPLOYMENT INSURANCE BY EMPLOYER-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>