force-app/main/default/objects/HSUInsuranceACBal__c/fields/UnemploymentInsurance__c.field-meta.xml
<CustomField>
    <fullName>UnemploymentInsurance__c</fullName>
    <formula>HSUInsuranceID__r.UnemploymentFundByEmployer__c 
+
 HSUInsuranceID__r.UnemploymentFundByEmployee__c</formula>
    <label>UNEMPLOYMENT INSURANCE-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>