force-app/main/default/objects/HSUInsuranceACBal__c/fields/UnemploymentInsuranceACBal__c.field-meta.xml
<CustomField>
    <fullName>UnemploymentInsuranceACBal__c</fullName>
    <label>UNEMPLOYMENT INSURANCE-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>